<resources>
  <string name="app_name" translatable="false">Snapu</string>

  <string name="bottom_nav_page_home">home</string>
  <string name="bottom_nav_page_record">record</string>
  <string name="bottom_nav_page_work">work</string>
  <string name="bottom_nav_page_mine">mine</string>

  <string name="login_name_hint">Full Name</string>
  <string name="login_name_helper_text">Enter your name as shown on your passport</string>
  <string name="login_account_hint">Phone</string>
  <string name="login_account_helper_text">Enter 11-digit phone number</string>
  <string name="login_account_prefix_text" translatable="false">+86</string>
  <string name="login_password_hint">Password</string>
  <string name="login_password_confirm_hint">Confirm Password</string>
  <string name="login_password_helper_text">6–20 letters/numbers</string>
  <string name="login_password_forgot">Forgot Password?</string>
  <string name="login_button_text">Login</string>
  <string name="login_sign_button_text">Sign Up</string>
  <string name="login_confirm_button_text">Confirm</string>
</resources>