<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <ImageView
    android:layout_width="@dimen/login_app_icon_size"
    android:layout_height="@dimen/login_app_icon_size"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/login_content_margin_top"
    android:src="@drawable/app_icon" />

  <com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/page_padding_right"
    android:layout_marginStart="@dimen/page_padding_left"
    android:layout_marginTop="@dimen/login_widget_margin_top"
    app:cardBackgroundColor="@color/color_card"
    app:cardElevation="@dimen/card_elevation"
    app:strokeWidth="@dimen/card_stroke_width">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/page_padding_left"
      android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_account_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/login_account_helper_text"
        app:helperTextEnabled="true"
        app:placeholderText="@string/login_account_hint"
        app:prefixText="@string/login_account_prefix_text">

        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/login_text_input_margin_top"
        android:hint="@string/login_password_hint"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="@string/login_password_helper_text"
        app:helperTextEnabled="true"
        app:placeholderText="@string/login_password_hint">

        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:maxLines="1" />
      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

  </com.google.android.material.card.MaterialCardView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/page_padding_right"
    android:layout_marginStart="@dimen/page_padding_left"
    android:orientation="vertical">


    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/page_padding_right"
      android:layout_marginTop="@dimen/login_widget_margin_top"
      android:gravity="end"
      android:text="@string/login_password_forgot"
      android:textColor="@color/colorTextLink"/>

    <Button
      android:id="@+id/login_btn"
      style="?attr/materialIconButtonFilledStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/login_widget_margin_top"
      android:text="@string/login_button_text" />

    <Button
      android:id="@+id/sign_up_btn"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/login_widget_margin_top"
      android:text="@string/login_sign_button_text" />

  </LinearLayout>

</LinearLayout>